--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.internship">
-   <application
+    <uses-permission android:name="android.permission.INTERNET"/> 
+
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/> 
+    <uses-permission android:name="android.permission.READ_CONTACTS"/>
+    <uses-permission android:name="android.permission.READ_SMS" />
+    <uses-permission android:name="android.permission.BODY_SENSORS"/>
+    <uses-permission android:name="android.permission.ANSWER_PHONE_CALLS"/> 
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+   <application  
         android:label="internship"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
